[package]
name = "vineyard-gtk"
version = "0.0.0"
edition = "2024"
authors = ["Arris Kathery <whotookelburg@hotmail.com>"]
description = "A GTK frontend to the Vineyard daemon."
readme = "README.md"

[dependencies]
gtk4 = "0.10.0"
msi = "0.8.0"
quick-xml = "0.38.0"
rust-i18n = "3"
toml = "0.9.2"
yaml-rust = "0.4.5"
zbus = "5.9.0"
